# toolsmith

./: .gitignore  README.md  main.py  pyproject.toml
output/: 1_google_scholar_search_results.json  2_parsed_papers.json  2_parsed_papers_sample.json  3_tools_from_papers.json  4_essential_tools.json
prompts/: generate_google_scholar_query.txt  identify_tools_in_paper.txt  identify_tools_in_paper_biomni.txt  select_tools.txt
